Gap In between Dashboard Resolved

--- a/src/Component/UserManagment/Usermang.css
+++ b/src/Component/UserManagment/Usermang.css
@@ -20,7 +20,7 @@ a:hover {
   width: 90%;
 }
 a {
-  color: #808080 !important;
+  color: #808080;
   text-decoration: none;
   background-color: transparent;
   padding: 5px;
