--- a/src/pages/landing/landing_css/navigationDashboard.css
+++ b/src/pages/landing/landing_css/navigationDashboard.css
@@ -25,7 +25,7 @@
 
 #layer {
   width: 350px;
-  height: 780px;
+  height: 100vh;
   overflow: hidden;
   display: block;
   position: relative;
